# japanese

./: .gitignore  CLAUDE.md  README.md  docusaurus.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  sidebars.ts  vitest.config.js  vitest.config.mjs  vitest.config.ts
.claude/commands/: new-lesson.md  sync-vocabulary.md
.github/: CONTRIBUTING.md  dependabot.yml
.github/docs/: README.md  content-guide.md  deployment-guide.md  docusaurus.md  vocabulary-extraction.md
.github/workflows/: deploy.yml  test.yml
docs/: intro.md  intro.mdx
docs/lessons/: hiragana-basics.md  intro.md  intro.mdx
docs/reference/: hiragana-chart.md  index.md  katakana-chart.md  n5-vocabulary.md  particle-guide.md  verb-conjugation.md
docs/templates/: README.md  conjugation-template.md  grammar-template.md  vocabulary-template.md
scripts/: extract-vocabulary.js  extract-vocabulary.ts
src/components/: README.md
src/css/: custom.css
src/data/: jlpt-levels.ts  jlpt-vocabulary.json  lesson-paths.json  n5-vocabulary.json  vocabulary-types.js  vocabulary-types.ts  vocabulary.yaml
src/lib/: dictionary.ts  study.ts
src/pages/: dictionary.module.css  dictionary.tsx  index.module.css  index.tsx  study.module.css  study.tsx  (+2 more)
tests/: duplicate-prevention.test.ts  extract-vocabulary.test.ts  setup.ts  test-utils.ts
translator/: README.md  pyproject.toml
translator/tests/: __init__.py  conftest.py  test_intent.py  test_models.py
translator/tests/e2e/: __init__.py  test_cli_smoke.py
translator/translator/: __init__.py  intent.py  main.py  models.py
(+188 files in other folders)
