[project]
name = "japanese-translator"
version = "0.1.0"
description = "A CLI tool for translating English to Japanese with hiragana, kanji, and romaji output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers>=5.0.0",
    "torch>=2.5.0",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.30.0",
    "pykakasi>=2.2.1",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "accelerate>=1.0.0",
]

[project.scripts]
translate = "translator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["translator"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (model loading required)",
    "e2e: marks tests as end-to-end smoke tests",
]
# Default: run only fast unit tests (exclude slow and e2e)
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
